# cosmicforge-rtc

./: GETTING_STARTED.md  README.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCS_CLEANUP_SUMMARY.md  Dockerfile  docker-compose.yml
backend/.cargo/: config.toml
backend/.claude/: settings.local.json
backend/docs/: API_IMPLEMENTATION.md  API_INTEGRATION.md  API_VERSIONING_UPDATE.md  AUTH_API_TESTING.md  CHAT.md  CODE_REORGANIZATION.md  DATABASE_SCHEMA.md  DOCKER_TESTING_GUIDE.md  EMAIL_QUEUE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LIVEKIT.md  LOGGING.md  MEETINGS.md  MIGRATIONS.md  OAUTH_SETUP.md  PARTICIPANTS.md  QUICK_START.md  README.md  README_MIGRATIONS.md  SWAGGER_GUIDE.md  SWAGGER_SETUP_COMPLETE.md  SWAGGER_UI_READY.md
backend/migration/: Cargo.toml  README.md  test_connection.rs
backend/migration/src/: lib.rs  m20260116_000001_create_users.rs  m20260116_000002_create_meetings.rs  m20260116_000003_create_participants.rs  m20260116_000004_create_audio_video_devices.rs  m20260116_000005_create_chat_messages.rs  m20260116_000006_create_session_logs.rs  m20260116_000007_create_webhooks.rs  m20260116_000008_create_api_keys.rs  m20260117_000001_create_email_jobs.rs  m20260117_000002_add_reset_token_to_users.rs  m20260127_000001_create_oauth_states.rs  m20260205_110126_m20260205_000001_add_guest_role.rs  m20260206_000001_add_media_toggle_event_type.rs  main.rs
backend/src/: error.rs  lib.rs  main.rs  state.rs
backend/src/config/: app.rs  email.rs  livekit.rs  logging.rs  mod.rs
backend/src/dto/: admin.rs  api_keys.rs  auth.rs  common.rs  meetings.rs  mod.rs  users.rs  webhooks.rs
backend/src/handlers/: admin.rs  api_keys.rs  auth.rs  chat.rs  meetings.rs  mod.rs  participants.rs  root.rs  users.rs  webhooks.rs
backend/src/middleware/: api_key.rs  auth.rs  mod.rs
backend/src/models/: api_keys.rs  audio_video_devices.rs  chat_messages.rs  email_jobs.rs  meetings.rs  mod.rs  oauth_states.rs  participants.rs  session_logs.rs  users.rs  webhooks.rs
backend/src/queues/: email.rs  mod.rs
backend/src/routes/: admin.rs  api.rs  api_keys.rs  auth.rs  meetings.rs  mod.rs  participants.rs  users.rs  webhooks.rs
backend/src/services/: auth.rs  email.rs  livekit.rs  mod.rs
backend/src/swagger/: mod.rs
backend/src/templates/email/: base.rs  mod.rs  notification.rs  password_reset.rs  verification.rs  welcome.rs
backend/src/utils/: datetime.rs  format.rs  meeting.rs  mod.rs
backend/src/workers/: email.rs  meeting_auto_end.rs  meeting_auto_start.rs  mod.rs
docs/: TIMEZONE.md  WINDOWS_SETUP.md
frontend/: package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/docs/: designer-guide.html  generate-pdf.js  ui-ux-design-guide.html
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/context/: ChatContext.tsx  index.ts
frontend/src/hooks/: index.ts  useApiKeys.ts  useChat.ts  useCreateMeeting.ts  useDeleteMeeting.ts  useEndMeeting.ts  useGoogleCallback.ts  useJoinMeeting.ts  useLogin.ts  useLogout.ts  useMediaControl.ts  useMediaStream.ts  useMeeting.ts  useMeetings.ts  useMicLevel.ts  useParticipants.ts  usePublicMeeting.ts  useRegister.ts  useResendVerification.ts  useUpdateMeeting.ts  useUser.ts  useVerifyEmail.ts  useVerifyResetToken.ts  useWaitingRoom.ts  useWebhooks.ts
frontend/src/lib/: utils.ts
(+76 files in other folders)
