[workspace]
members = [".", "migration"]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
migration = { path = "migration" }
tokio = { version = "1.42.0", features = ["full"] }
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
# Email (for verification)
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio-stream = "0.1.18"
futures-util = "0.3.31"

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
urlencoding = "2.1"

# LiveKit
livekit-api = "0.4"

[[bin]]
name = "test_email"
path = "src/bin/test_email.rs"

[package.metadata.scripts]
server = "cargo run --bin my_app"
migrate = "sea-orm-cli migrate up"
test-db = "docker-compose up -d && cargo test"
