[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[[bin]]
name = "test_connection"
path = "test_connection.rs"

[dependencies]
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
async-trait = "0.1"
sea-orm-migration = { version = "1.1.0", features = ["sqlx-postgres", "runtime-async-std-rustls"] }
dotenvy = "0.15"
